15 將 /Clients/Create 頁面的內容整合到 /Clients/Index 頁面最下方

--- a/MVC5Course/Views/Clients/Index.cshtml
+++ b/MVC5Course/Views/Clients/Index.cshtml
@@ -127,6 +127,8 @@
 }
 
 </table>
+
+@Html.Action("Create");
 @*<script>
-    var test = "@Model.ToArray<>";
+    var model= @Model.ToList();
 </script>*@
