--- a/MVC5Course/Views/Products/Details.cshtml
+++ b/MVC5Course/Views/Products/Details.cshtml
@@ -42,6 +42,13 @@
             @Html.DisplayFor(model => model.Stock)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.IsDeleted)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.IsDeleted)
+        </dd>
     </dl>
 </div>
 <p>
