--- a/MVC5Course/Views/MB/MyFormResult.cshtml
+++ b/MVC5Course/Views/MB/MyFormResult.cshtml
@@ -8,6 +8,10 @@
     var c = TempData["MyFormData"] as MVC5Course.Models.ClientLoginViewModels;
     if (c != null)
     {
-      < h3 > @c.FirstName @c.LastName 新增資料成功！</ h3 >
+      <h3> @c.FirstName @c.LastName 新增資料成功！</h3>
+    }
+    else
+    {
+        @Html.ActionLink("Back to List", "MyForm")
     }
 }
