--- a/MVC5Course/Views/Clients/Details.cshtml
+++ b/MVC5Course/Views/Clients/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model MVC5Course.Models.Client
+﻿@model Client
 
 @{
     ViewBag.Title = "Details";
@@ -140,6 +140,12 @@
 
     </dl>
 </div>
+<h3>Html.Action</h3>
+@Html.Action("Index", "Orders", new { ClientId = Model.ClientId})
+
+<h3>Html.Action</h3>
+@Html.Partial("../Orders/Index", Model.Order.ToList())
+
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.ClientId }) |
     @Html.ActionLink("Back to List", "Index")
