--- a/MVC5Course/Views/Clients/Index.cshtml
+++ b/MVC5Course/Views/Clients/Index.cshtml
@@ -11,8 +11,12 @@
 </p>
 <p>
     <form action="">
-        <input type="search" name="search" value="" />
+        @*<input type="search" name="search" value="" />*@
+        @Html.TextBox("search")
+        @Html.DropDownList("CreditRating", "--請選擇評價--")
+        @Html.DropDownList("Gender", "--請選擇性別--")
         <input type="submit" value="搜尋" />
+        
     </form>
 </p>
 <table class="table">
