59 練習 PagedList.Mvc 對 /Products/Index 顯示的資料進行分頁處裡

--- a/MVC5Course/Views/Products/Index.cshtml
+++ b/MVC5Course/Views/Products/Index.cshtml
@@ -55,6 +55,12 @@
 }
 
 </table>
+
+@using PagedList;
+@using PagedList.Mvc;
+<div style="text-align:center;">
+    @Html.PagedListPager(Model as IPagedList, (p) => Url.Action("Index", new { PageNo = p }));
+</div>
 <div id="details"></div>
 
 
