60 練習 PagedList.Mvc 對 /Products/Index 顯示的資料進行分頁處裡 ( 使用 Ajax 方法 )

--- a/MVC5Course/Views/Products/Index.cshtml
+++ b/MVC5Course/Views/Products/Index.cshtml
@@ -2,6 +2,10 @@
 
 @{
     ViewBag.Title = "Index";
+    if (IsAjax)
+    {
+        Layout = "";
+    }
 }
 
 <h2>Index</h2>
@@ -59,7 +63,7 @@
 @using PagedList;
 @using PagedList.Mvc;
 <div style="text-align:center;">
-    @Html.PagedListPager(Model as IPagedList, (p) => Url.Action("Index", new { PageNo = p }));
+    @Html.PagedListPager(Model as IPagedList, (p) => Url.Action("Index", new { PageNo = p }), PagedListRenderOptions.EnableUnobtrusiveAjaxReplacing("#Main"));
 </div>
 <div id="details"></div>
 
