--- a/MVC5Course/Views/Shared/_Layout.cshtml
+++ b/MVC5Course/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div class="container body-content" id="Main">
         @RenderBody()
         <hr />
         <footer>
