--- a/MVC5Course/Views/Products/Index.cshtml
+++ b/MVC5Course/Views/Products/Index.cshtml
@@ -69,5 +69,13 @@
 
 
 @section Scripts{
+    @{ 
+        ViewBag.Msg = @"123';
+        alert('XSS'); //123";
+    }
     <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
+    <script>
+        var str = '@Ajax.JavaScriptStringEncode(ViewBag.Msg)';
+        alert(str);
+    </script>
 }
