替 Products1 加入「分頁功能」

--- a/MVC5Course/Views/Products1/Index.cshtml
+++ b/MVC5Course/Views/Products1/Index.cshtml
@@ -55,3 +55,8 @@
 }
 
 </table>
+
+@using PagedList;
+@using PagedList.Mvc;
+
+@Html.PagedListPager(Model as IPagedList, p => Url.Action("Index", new { pageNo = p }));
